Revise personal details in _config.yml
Updated personal information and descriptions in the config file.

--- a/_config.yml
+++ b/_config.yml
@@ -19,30 +19,33 @@ title: Ellen Sirleaf # the main title
 tagline: Cybersecurity | Data Science | AI & ML | Ethical Hacking # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+   A passionate Math and Computer Science enthusiast driven by curiosity and purpose.  
+  I thrive at the intersection of Data Science and Cybersecurity — extracting insights that empower decisions while safeguarding the data that fuels them.  
+  With growing expertise in Artificial Intelligence, Machine Learning, and Penetration Testing, I aim to bridge the gap between intelligent analytics and digital resilience.  
+  My mission is to make data not only powerful, but protected.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://Ellen-code-dev.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: Ellen-code-dev # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: ESirleaf1916 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Ellen Sirleaf
+  email: oderosirleaf11@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://x.com/ESirleaf1916 # change to your Twitter homepage
+    - https://github.com/Ellen-code-dev # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+     - https://www.linkedin.com/in/ellen-sirleaf-745905302/
 
 # Site Verification Settings
 webmaster_verifications:
